# Tests password requirements for a single password
appId: ${MAESTRO_APP_ID}
---
# Try a password 
- tapOn: Password
- eraseText
- inputText: ${TEST_PASSWORD}
- pressKey: Enter
- eraseText
- inputText: ${TEST_PASSWORD}

# Check if next button is not tapable on iOS - `enabled` flag is not supported on Android
- runFlow:
    when:
      platform: iOS
    commands:
        - assertVisible:
            text: "Next"
            enabled: false
    label: "Next button not tapable on iOS"

# Check icons on Password Requirements screen
- assertVisible: 
    text: "" # (i) icon indicating password is not valid
    label: "Password is not valid - ⓘ icon is visible"
- assertNotVisible:
    text: "" # Checkmark icon indicating password is valid
    label: "Password is valid - ✔️ icon is not visible"